# separating_planes_trajectory

./: .gitignore  CMakeLists.txt
include/cube-stacks/: CubeStackProblem.hh  CubeStackProblem1Cube.hh  CubeStackProblemOnManifold.hh  CubeStackProblemOnR.hh  CubeStackProblemOnSO3noS2.hh  PointCloudStackProblemOnManifold.hh  RoboptimCubeStackProblem.hh
include/cube-stacks/functions/: Cost.hh  CubeAboveFixedPlan.hh  CubeAboveFixedPlanRoboptim.hh  CubeAbovePlan.hh  CubeAbovePlanRoboptim.hh  Norm1Quaternion.hh  Norm1Vector.hh  PointCloudAboveFixedPlan.hh  PointCloudAbovePlan.hh  TotalCost.hh
include/cube-stacks/utils/: Cube.hh  IndexManager.hh  Plan.hh  PointCloud.hh  ProblemConfig.hh  ProblemInfo.hh  quat2mat.hh
include/feet-trajectory/: BoxTrajProblem.hh  BoxesHullTrajProblem.hh  TrajectoryProblem.hh
include/feet-trajectory/functions/: BoxAboveFixedPlan.hh  BoxAbovePlan.hh  CostDistance.hh  FixedBoxPosition.hh  PlanBetweenBoxAndObstacle.hh
include/feet-trajectory/utils/: AlternateQPSolver.hh  AlternateQPSolverJerk.hh  Box.hh  FixedPlan.hh  IndexManager.hh  Jerk3DIntegrator.hh  MpcCondense.hh  Plan.hh  PlanForHull.hh  Printer.hh  ProblemConfig.hh  ProblemInfo.hh  QP.hh  QPBoxesFixed.hh  QPBoxesFixedIndividual.hh  QPPlanesFixed.hh  QPWithNFixed.hh  TripleIntegrator.hh  defs.hh  quat2mat.hh
scripts/: animCube.py  animSteps.py  entry.yml  log.yml  viewSteps.py
src/: BoxTrajProblem.cc  BoxesHullTrajProblem.cc  CMakeLists.txt  CubeStackProblem.cc  CubeStackProblem1Cube.cc  CubeStackProblemOnManifold.cc  CubeStackProblemOnR.cc  CubeStackProblemOnSO3noS2.cc  PointCloudStackProblemOnManifold.cc  RoboptimCubeStackProblem.cc  TrajectoryProblem.cc
src/functions/: BoxAboveFixedPlan.cc  BoxAbovePlan.cc  Cost.cc  CostDistance.cc  CubeAboveFixedPlan.cc  CubeAboveFixedPlanRoboptim.cc  CubeAbovePlan.cc  CubeAbovePlanRoboptim.cc  FixedBoxPosition.cc  Norm1Quaternion.cc  Norm1Vector.cc  PlanBetweenBoxAndObstacle.cc  TotalCost.cc
src/utils/: AlternateQPSolver.cc  AlternateQPSolverJerk.cc  Box.cc  IndexManager.cc  Jerk3DIntegrator.cc  MpcCondense.cc  Printer.cc  ProblemConfig.cc  QP.cc  QPBoxesFixed.cc  QPBoxesFixedIndividual.cc  QPPlanesFixed.cc  QPWithNFixed.cc  TripleIntegrator.cc  quat2mat.cc
tests/: CMakeLists.txt  HelloWorld.cc  compareMethods.cc  compareMethodsMultiple.cc  compareMethodsMultiple.yml  compareRegularisationVal.cc  compareRegularisationVal.yml  compareResolutionMethods.cc  generateTrajectory.cc  generateTrajectoryAltQP.cc  generateTrajectoryAltQPJerk.cc  generateTrajectoryPGSolver.cc  oneObstacleHullTraj.cc  oneObstacleHullTraj.yml  oneObstacleTraj.cc  oneObstacleTraj.yml  stackCubes.cc  stackCubes.yml  stackCubesNoManifold.cc  stackCubesRoboptim.cc  stackCubesRoboptim.yml  stackCubesTmp.yml  stackPointCloud.yml  stackPointClouds.cc  stepOnStairs.yml  straightTraj.cc  straightTraj.yml  test.yml  testBoxAbovePlanCstr.cc  testBoxAbovePlanCstr.yml  testRoboptimGradients.cc  test_1_cube.cc  trajProblem.cc
tests/configs/: comanoid.yml  multiObstacles.yml  onlyFloor.yml  singleObstacle.yml  stepOnStairs.yml  trajProblem.yml  virtualObstacle.yml  withFloor.yml
tests/unit-tests/: testJerk3DIntegrator.cc  testMpcCondense.cc  testTripleIntegrator.cc
